# quilting

./: .gitignore  LICENSE  NOTICE  README.md
Foundations/: README.md  TODO.md
Foundations/FPPTemplates/: ContentView.swift  FPPTemplatesApp.swift  TemplateRenderer.swift
Foundations/Swift/FPPTemplates/: ContentView.swift  TemplateRenderer.swift
Foundations/Swift/FPPTemplates.xcodeproj/: project.pbxproj
Foundations/python/: README.md  pyproject.toml
Foundations/python/src/quilt_fpp_templates/: __init__.py  cli.py
Quilt Log/: .gitignore  README.md
Quilt Log/Documentation/: Export_Format_and_Schemas.md  quilt-log-backup.schema.json  sync-behavior.md
Quilt Log/QuiltLog/: CloudKitDiagnosticProbe.swift  DiagnosticLog.swift  PlatformSupport.swift  QuiltLog-iOS-Info.plist  QuiltLog-iOS.entitlements  QuiltLog.entitlements  QuiltLogApp.swift
Quilt Log/QuiltLog.xcodeproj/: project.pbxproj
Quilt Log/QuiltLog/Data/: QuiltStore.swift  SQLiteDatabase.swift
Quilt Log/QuiltLog/Models/: BackupModels.swift  PDFExportPreset.swift  Quilt.swift  QuiltRecord.swift  UserPreferences.swift
Quilt Log/QuiltLog/Services/: PDFExportService.swift  PDFPlaceholderDocument.swift  SQLitePlaceholderDocument.swift
Quilt Log/QuiltLog/Views/: AboutQuiltLogView.swift  ContentView.swift  MigrationProgressView.swift  PDFExportSheet.swift  PreferencesView.swift  (+1 more)
Quilt Log/QuiltLogTests/: BackupImportTests.swift  PDFExportPresetTests.swift  QuiltStoreMigrationTests.swift  QuiltStoreSharedTests.swift  UserPreferencesTests.swift
Quilt Log/scripts/: make_dmg.sh  make_sample_backup.py
(+4 files in other folders)
