[project]
name = "quilt-fpp-templates"
version = "0.1.0"
description = "Generate foundation paper piecing template PDFs."
requires-python = ">=3.14"
dependencies = []

[project.scripts]
fpp-template = "quilt_fpp_templates.cli:main"

[build-system]
requires = ["uv_build>=0.9.25,<0.12.0"]
build-backend = "uv_build"
